# english-backend

./: .env.dist  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  deps.py  enums.py  security.py
app/models/: models.py
app/routers/: auth.py  dictionary.py  friends.py  game.py  main.py  websocket.py
app/schemas/: auth_schema.py  friends_schema.py  game_schema.py
app/services/: connection_manager.py  game_manager.py
