[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammadali"},
    {name = "Jasurbek"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "tortoise-orm (>=0.25.0,<0.26.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "aerich (>=0.8.2,<0.9.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "windows-curses (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
